[workspace]
resolver = "2"
members = [
    "examples/rust", # 12.0.0
    "yellowstone-grpc-client", # 12.0.0
    "yellowstone-grpc-geyser", # 12.0.0
    "yellowstone-grpc-proto", # 12.0.0
]
exclude = [
    "yellowstone-grpc-client-nodejs/napi", # 0.2.0
]

[workspace.package]
authors = ["Triton One"]
edition = "2021"
homepage = "https://triton.one"
repository = "https://github.com/rpcpool/yellowstone-grpc"
license = "AGPL-3.0"
keywords = ["solana"]
publish = false

[workspace.dependencies]
affinity = "0.1.2"
anyhow = "1.0.98"
backoff = "0.4.0"
base64 = "0.22.1"
bincode = "1.3.3"
bs58 = "0.5.1"
bytes = "1.10.1"
cargo-lock = "11.0.0"
chrono = "0.4.26"
clap = "4.5.42"
criterion = "0.8.0"
crossbeam-channel = "0.5.8"
env_logger = "0.11.3"
futures = "0.3.24"
git-version = "0.3.5"
hex = "0.4.3"
hostname = "0.4.0"
http = "1.1.0"
http-body-util = "0.1.2"
humantime-serde = "1.1.1"
hyper = "1.4.1"
hyper-util = "0.1.7"
indicatif = "0.18.0"
lazy_static = "1.4.0"
local-ip-address = "0.6.1"
log = "0.4.17"
maplit = "1.0.2"
prometheus = "0.14.0"
prost = "0.14.0"
prost-types = "0.14.0"
prost_011 = { package = "prost", version = "0.11.9" }
protoc-bin-vendored = "3.2.0"
rayon = "1.11.0"
serde = "1.0.145"
serde_json = "1.0.86"
smallvec = "1.15.1"
thiserror = "2.0.16"
tokio = "1.47.1"
tokio-stream = "0.1.17"
tokio-util = "0.7.0"
tonic = "0.14.0"
tonic-build = "0.14.0"
tonic-prost = "0.14.0"
tonic-prost-build = "0.14.0"
tonic-health = "0.14.0"
vergen = "9.0.6"

# Agave Monorepo
agave-geyser-plugin-interface = "=3.1.8"
agave-geyser-plugin-interface-triton = { package = "agave-geyser-plugin-interface", git = "https://github.com/rpcpool/solana-public", branch = "v3.1-triton-public" }
solana-account-decoder = "~3.1.0"
solana-logger = "3.0.0"
solana-storage-proto = { version = "~3.1.0", features = ["agave-unstable-api"] }
solana-transaction-context = "~3.1.0"
solana-transaction-status = "~3.1.0"

# Solana SDK
solana-account = "3.0.0"
solana-clock = "3.0.0"
solana-hash = "4.0.0"
solana-keypair = "3.0.1"
solana-message = "3.0.1"
solana-pubkey = "4.0.0"
solana-signature = "3.1.0"
solana-signer = "3.0.0"
solana-transaction = "3.0.1"
solana-transaction-error = "3.0.0"

# Solana Misc
spl-token-2022-interface = "2.0.0"

# Yellowstone
yellowstone-grpc-client = { path = "yellowstone-grpc-client", version = "12.0.0" }
yellowstone-grpc-geyser = { path = "yellowstone-grpc-geyser", version = "12.0.0" }
yellowstone-grpc-proto = { path = "yellowstone-grpc-proto", version = "12.0.0", default-features = false }

[workspace.lints.clippy]
clone_on_ref_ptr = "deny"
missing_const_for_fn = "deny"
trivially_copy_pass_by_ref = "deny"

[patch.crates-io]
agave-feature-set = { git = "https://github.com/rpcpool/solana-public", branch = "v3.1-triton-public" }
agave-reserved-account-keys = { git = "https://github.com/rpcpool/solana-public", branch = "v3.1-triton-public" }
solana-account-decoder = { git = "https://github.com/rpcpool/solana-public", branch = "v3.1-triton-public" }
solana-account-decoder-client-types = { git = "https://github.com/rpcpool/solana-public", branch = "v3.1-triton-public" }
solana-storage-proto = { git = "https://github.com/rpcpool/solana-public", branch = "v3.1-triton-public" }
solana-svm-feature-set = { git = "https://github.com/rpcpool/solana-public", branch = "v3.1-triton-public" }
solana-transaction-context = { git = "https://github.com/rpcpool/solana-public", branch = "v3.1-triton-public" }
solana-transaction-status = { git = "https://github.com/rpcpool/solana-public", branch = "v3.1-triton-public" }
solana-transaction-status-client-types = { git = "https://github.com/rpcpool/solana-public", branch = "v3.1-triton-public" }

[profile.release]
lto = true
codegen-units = 1

