[workspace]
resolver = "2"
members = [
    "examples/rust",
    "yellowstone-grpc-client",
    "yellowstone-grpc-client-nodejs/napi",
    "yellowstone-grpc-e2e-macros",
    "yellowstone-grpc-geyser",
    "yellowstone-grpc-proto",
    "yellowstone-grpc-e2e-test",
    "yellowstone-grpc-tools"
]

[workspace.package]
authors = ["Triton One"]
edition = "2021"
homepage = "https://triton.one"
repository = "https://github.com/rpcpool/yellowstone-grpc"
license = "AGPL-3.0"
keywords = ["solana"]
publish = false

[workspace.dependencies]
foldhash = "0.2.0"
affinity = "0.1.2"
anyhow = "1.0.103"
arc-swap = "1.0.0"
backoff = "0.4.0"
base64 = "0.22.1"
bs58 = "0.5.1"
bytes = "1.10.1"
bytesize = "2.0.0"
cargo-lock = "11.0.0"
chrono = "0.4.45"
clap = "4.5.42"
criterion = "0.8.0"
crossbeam-channel = "0.5.8"
dotenvy = "0.15.0"
env_logger = "0.11.3"
fastrand = "2.0"
futures = "0.3.24"
futures-channel = "0.3.24"
futures-util = "0.3.24"
git-version = "0.3.5"
hex = "0.4.3"
home = "0.5.11"
hostname = "0.4.0"
http = "1.1.0"
http-body-util = "0.1.2"
humantime-serde = "1.1.1"
hyper = "1.4.1"
hyper-util = "0.1.7"
indicatif = "0.18.0"
inventory = "0.3.0"
lazy_static = "1.4.0"
local-ip-address = "0.6.1"
log = "0.4.17"
maplit = "1.0.2"
moka = "0.12.0"
napi = "3.4.0"
napi-build = "2.2.4"
napi-derive = "3.3.0"
napi-derive-backend = "3.0.0"
napi-sys = "3.0.1"
parking_lot = "0.12"
prometheus = "0.14.0"
pin-project = "1.1.10"
proc-macro2 = "1"
pin-project-lite = "0.2.0"
prost = "0.14.0"
prost-types = "0.14.0"
protoc-bin-vendored = "3.2.0"
quote = "1"
rand = "0.10.1"
rayon = "1.11.0"
reqwest = { version = "0.13.0" }
rustls = "0.23.0"
serde = "1.0.145"
serde_json = "1.0.86"
siphasher = "1"
socket2 = "0.6.4"
smallvec = "1.15.1"
syn = { version = "2", features = ["full"] }
thiserror = "2.0.16"
tokio = "1.47.1"
tokio-stream = "0.1.17"
tokio-util = "0.7.0"
tower = "0.5.0"
tower-layer = "0.3.3"
tonic = "0.14.0"
tonic-build = "0.14.0"
tonic-prost = "0.14.0"
tonic-prost-build = "0.14.0"
tonic-health = "0.14.0"
url = "2.5.0"
uuid = "1"
vergen = "9.0.6"
wincode = "0.5.0"

# Agave Monorepo
agave-geyser-plugin-interface = "4.1.0"
solana-account-decoder = "4.1.0"
solana-logger = "3.0.0"
solana-storage-proto = { version = "4.1.0", features = ["agave-unstable-api"] }
solana-transaction-context = "4.1.0"
solana-transaction-status = "4.1.0"

# Solana SDK
solana-account = "4.0.0"
solana-clock = "3.0.0"
solana-commitment-config = "3.0.0"
solana-hash = "4.3.0"
solana-keypair = "3.0.0"
solana-message = "4.1.0"
solana-pubkey = "4.0.0"
solana-signature = "3.0.0"
solana-signer = "3.0.0"
solana-transaction = "4.0.0"
# We need to pin this to 3.2.0 because introduce a breaking changing in 3.3.0 which prevents compilation of solana-storage-proto.
solana-transaction-error = "=3.2.0"

# Solana Misc
spl-token-2022-interface = "2.1.0"

# Yellowstone
yellowstone-block-machine = { version = "0.8.0", default-features = false }
yellowstone-grpc-client = { path = "yellowstone-grpc-client", version = "13.1.0" }
yellowstone-grpc-geyser = { path = "yellowstone-grpc-geyser", version = "14.1.0" }
yellowstone-grpc-proto = { path = "yellowstone-grpc-proto", version = "12.5.0", default-features = false }
yellowstone-grpc-e2e-macros = { path = "yellowstone-grpc-e2e-macros", version = "0.1.0" }
yellowstone-grpc-tools = { path = "yellowstone-grpc-tools", version = "0.1.0" }

# tokio-grpc-tools
tokio-rustls = "0.26.0"
x509-parser = "0.18.0"


[workspace.lints.clippy]
clone_on_ref_ptr = "deny"
missing_const_for_fn = "deny"
trivially_copy_pass_by_ref = "deny"
collapsible_match = "allow"

[profile.release]
lto = true
codegen-units = 1
