[package]
name = "solana-geyser-grpc-client-simple"
version = "0.5.3+solana.1.15.2"
authors = ["Triton One"]
edition = "2021"

[dependencies]
anyhow = "1.0.62"
backoff = { version = "0.4.0", features = ["tokio"] }
clap = { version = "3.2.22", features = ["cargo", "derive"] }
env_logger = "0.10.0"
futures = "0.3.24"
log = { version = "0.4.14", features = ["std"] }
solana-geyser-grpc = { path = "../solana-geyser-grpc" }
solana-geyser-grpc-client = { path = "../rust" }
tokio = { version = "1.21.2", features = ["rt-multi-thread", "macros", "time"] }

[[bin]]
name = "client"
