[package]
name = "solana-geyser-grpc-client"
version = "0.5.2+solana.1.14.15"
authors = ["Triton One"]
edition = "2021"

[[bin]]
name = "client"
path = "client/client.rs"

[dependencies]
anyhow = "1.0.62"
backoff = { version = "0.4.0", features = ["tokio"] }
clap = { version = "3.2.22", features = ["cargo", "derive"] }
futures = "0.3.24"
solana-geyser-grpc = { path = "../solana-geyser-grpc" }
thiserror = "1.0"
tokio = { version = "1.21.2", features = ["rt-multi-thread", "macros", "time"] }
tonic = { version = "0.8.2", features = ["gzip", "tls", "tls-roots"] }
