[package]
name = "triton-grpc-client"
version = "1.0.0+solana.1.15.2"
authors = ["Triton One"]
edition = "2021"

[dependencies]
bytes = "1.3.0"
futures = "0.3.24"
http = "0.2.8"
triton-grpc-proto = { path = "../triton-grpc-proto" }
thiserror = "1.0"
tonic = { version = "0.8.2", features = ["gzip", "tls", "tls-roots"] }

[dev-dependencies]
tokio = { version = "1.21.2", features = ["macros"] }
