[package]
name = "solana-geyser-grpc-config-check"
version = "0.5.3+solana.1.15.2"
authors = ["Triton One"]
edition = "2021"

[[bin]]
name = "config-check"
path = "src/bin/config-check.rs"

[dependencies]
anyhow = "1.0.62"
triton-grpc-geyser = { path = "../triton-grpc-geyser" }
clap = { version = "3.2.22", features = ["cargo", "derive"] }
