[package]
name = "solana-geyser-grpc-config-check"
version = "0.5.3+solana.1.15.2"
authors = ["Triton One"]
edition = "2021"

[[bin]]
name = "config-check"

[dependencies]
anyhow = "1.0.62"
clap = { version = "3.2.22", features = ["cargo", "derive"] }
triton-grpc-geyser = { path = "../triton-grpc-geyser" }
