[package]
name = "yellowstone-grpc-e2e-macros"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
publish = false

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }

[lints]
workspace = true