[package]
name = "yellowstone-grpc-intg-test"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
publish = false



[dependencies]
anyhow = "1"
futures = { workspace = true }
clap = { workspace = true, features = ["derive"] }
dotenvy = { workspace = true }
humantime-serde = { workspace = true }
inventory = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true }
tower = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
yellowstone-grpc-e2e-macros = { path = "../yellowstone-grpc-e2e-macros" }
yellowstone-grpc-proto = { workspace = true }
yellowstone-block-machine = { workspace = true }
yellowstone-grpc-client = { workspace = true, features = ["test-tools"] }
yellowstone-grpc-geyser = { workspace = true }

serde = { workspace = true, features = ["derive"] }
toml = { workspace = true }
solana-signature = { workspace = true }
solana-pubkey = { workspace = true }
solana-commitment-config = { workspace = true }

[lints]
workspace = true