[package]
name = "yellowstone-grpc-fluvio"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
publish.workspace = true

[dependencies]
# async-std = { version = "1.13.0", features = ["attributes"] }
bytes = { workspace = true }
bytesize = "1.3.0"
bytesize-serde = "0.2.1"
clap = { workspace = true, features = ["derive"] }
env_logger = { workspace = true }
humantime-serde = { workspace = true }
fluvio = "0.24.4"
log = { workspace = true  }
serde = { workspace = true, features = ["derive"] }
serde_yaml = "0.9.34"
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tokio-stream = { workspace = true }
yellowstone-grpc-client = { workspace = true }
yellowstone-grpc-proto = { workspace = true }
futures-util = "0.3.31"

[lints]
workspace = true
