[workspace]

[package]
name = "yellowstone-grpc-geyser-harness"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "yellowstone_grpc_geyser_harness"
path = "src/lib.rs"

[[bin]]
name = "yellowstone-geyser-harness"
path = "src/main.rs"

[dependencies]
agave-geyser-plugin-interface = { git = "https://github.com/rpcpool/solana-public", tag = "v4.0.0-triton-public" }
solana-transaction = "~3.1.0"
solana-transaction-status = { git = "https://github.com/rpcpool/solana-public", tag = "v4.0.0-triton-public" }
clap = { version = "4", features = ["derive"] }
log = "0.4"
rand = "0.8"
rand_chacha = "0.3"
hdrhistogram = "7"
libloading = "0.8"
serde_json = "1"

[lints.clippy]
clone_on_ref_ptr = "deny"
missing_const_for_fn = "deny"
trivially_copy_pass_by_ref = "deny"

[profile.release]
lto = true
codegen-units = 1