[package]
name = "yellowstone-grpc-geyser-messages"
version = "2.0.0"
authors = { workspace = true }
edition = { workspace = true }
description = "Yellowstone gRPC Geyser Plugin Messages"
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
publish = { workspace = true }

[dependencies]
agave-geyser-plugin-interface = { workspace = true }
bincode = { workspace = true }
bytes = { workspace = true }
prost = { workspace = true }
solana-sdk = { workspace = true }
solana-transaction-status = { workspace = true }
thiserror = { workspace = true }
tonic = { workspace = true }

[lints]
workspace = true
