[package]
name = "yellowstone-grpc-geyser"
version = "12.0.0"
authors = { workspace = true }
edition = { workspace = true }
description = "Yellowstone gRPC Geyser Plugin"
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
publish = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "config-check"

[dependencies]
affinity = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
bincode = { workspace = true }
bs58 = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true, features = ["derive"] }
crossbeam-channel = { workspace = true }
futures = { workspace = true }
hostname = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }
humantime-serde = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
prometheus = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "fs"] }
tokio-util = { workspace = true, features = ["rt"]}
tokio-stream = { workspace = true }
tonic = { workspace = true, features = ["gzip", "zstd", "tls-native-roots"] }
tonic-health = { workspace = true }
tonic-prost = { workspace = true }

# Agave Monorepo
agave-geyser-plugin-interface = { workspace = true }
solana-logger = { workspace = true }

# Solana SDK
solana-account = { workspace = true }
solana-account-decoder = { workspace = true }
solana-clock = { workspace = true }
solana-hash = { workspace = true }
solana-message = { workspace = true }
solana-pubkey = { workspace = true }
solana-signature = { workspace = true }
solana-transaction = { workspace = true }
solana-transaction-context = { workspace = true }
solana-transaction-error = { workspace = true }
solana-transaction-status = { workspace = true }

# Solana Misc
smallvec = { workspace = true }
solana-storage-proto = { workspace = true, optional = true }
spl-token-2022-interface = { workspace = true }

# Bench
prost_011 = { workspace = true, optional = true }

# Yellowstone
yellowstone-grpc-proto = { workspace = true, features = ["tonic", "account-data-as-bytes"] }

[[bench]]
name = "encode"
harness = false
required-features = ["bench"]

[features]
bench = ["dep:prost_011", "dep:solana-storage-proto"]

[build-dependencies]
anyhow = { workspace = true }
cargo-lock = { workspace = true }
git-version = { workspace = true }
protoc-bin-vendored = { workspace = true }
tonic-build = { workspace = true }
tonic-prost-build = { workspace = true }
vergen = { workspace = true, features = ["build", "rustc"] }

[dev-dependencies]
bytes = { workspace = true }
criterion = { workspace = true }
prost_011 = { workspace = true }
solana-keypair = { workspace = true }
solana-signature = { workspace = true }
solana-signer = { workspace = true }
solana-storage-proto = { workspace = true }
solana-transaction = { workspace = true, features = ["bincode", "blake3"] }

[lints]
workspace = true
