[package]
name = "yellowstone-grpc-geyser"
version = "13.2.2-triton-ext"
authors = { workspace = true }
edition = { workspace = true }
description = "Yellowstone gRPC Geyser Plugin"
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
publish = { workspace = true }

[lib]
crate-type = ["rlib"]

[[bin]]
name = "yellowstone-grpc"
path = "src/main.rs"

[[bin]]
name = "config-check"

[dependencies]
tikv-jemallocator = { version = "0.6.1", features = ["disable_initial_exec_tls"] }

anyhow = { workspace = true }
base64 = { workspace = true }
bincode = { workspace = true }
bs58 = { workspace = true }
bytes = { workspace = true }
bytesize = { workspace = true, features = ["serde"]}
clap = { workspace = true, features = ["derive"] }
crossbeam-channel = { workspace = true }
futures = { workspace = true }
hostname = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }
humantime-serde = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
pin-project = { workspace = true }
prometheus = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "fs", "signal"] }
tokio-util = { workspace = true, features = ["rt"]}
tokio-stream = { workspace = true }
tower-layer = { workspace = true }
tonic = { workspace = true, features = ["gzip", "zstd", "tls-native-roots"] }
tonic-health = { workspace = true }
tonic-prost = { workspace = true }

# Agave Monorepo
solana-logger = { workspace = true }

# Solana SDK
solana-account = { workspace = true }
solana-account-decoder = { workspace = true }
solana-clock = { workspace = true }
solana-commitment-config = { workspace = true }
solana-hash = { workspace = true }
solana-message = { workspace = true }
solana-pubkey = { workspace = true }
solana-signature = { workspace = true }
solana-transaction = { workspace = true }
solana-transaction-context = { workspace = true }
solana-transaction-error = { workspace = true }
solana-transaction-status = { workspace = true }

# Solana Misc
smallvec = { workspace = true }
solana-storage-proto = { workspace = true, optional = true }
spl-token-2022-interface = { workspace = true }

# Bench
prost_011 = { workspace = true, optional = true }

# Yellowstone
yellowstone-grpc-proto = { workspace = true, features = ["tonic", "account-data-as-bytes"] }
yellowstone-block-machine = { workspace = true, default-features = false }
yellowstone-shmem-client = { path = "../../yellowstone-shmem/crates/yellowstone-shmem-client" }
yellowstone-shmem-common = { path = "../../yellowstone-shmem/crates/yellowstone-shmem-common" }

[target.'cfg(any(target_os = "linux", target_os = "windows"))'.dependencies]
# wrapped in mod cpu_core_affinity
affinity = { workspace = true }

[[bench]]
name = "encode"
harness = false
required-features = ["bench"]

[features]
bench = ["dep:prost_011", "dep:solana-storage-proto"]

[build-dependencies]
anyhow = { workspace = true }
cargo-lock = { workspace = true }
git-version = { workspace = true }
protoc-bin-vendored = { workspace = true }
tonic-build = { workspace = true }
tonic-prost-build = { workspace = true }
vergen = { workspace = true, features = ["build", "rustc"] }

[dev-dependencies]
bytes = { workspace = true }
criterion = { workspace = true }
prost_011 = { workspace = true }
solana-keypair = { workspace = true }
solana-signature = { workspace = true }
solana-signer = { workspace = true }
solana-storage-proto = { workspace = true }
solana-transaction = { workspace = true, features = ["bincode", "blake3"] }
yellowstone-conduit = { path = "../../yellowstone-conduit" }

[lints]
workspace = true