[package]
name = "yellowstone-grpc-geyser"
version = "14.2.0-rc2"
authors = { workspace = true }
edition = { workspace = true }
description = "Yellowstone gRPC Geyser Plugin"
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
publish = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "config-check"

[features]
default = []
bench = ["dep:solana-storage-proto"]

[dependencies]
foldhash = { workspace = true }
arc-swap = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
bs58 = { workspace = true }
bytes = { workspace = true }
bytesize = { workspace = true, features = ["serde"]}
clap = { workspace = true, features = ["derive"] }
crossbeam-channel = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true }
hostname = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }
humantime-serde = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
moka = { workspace = true, features = ["future"] }
pin-project = { workspace = true }
prometheus = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
rayon = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive", "rc"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "fs", "signal"] }
tokio-util = { workspace = true, features = ["rt"]}
tokio-rustls = { workspace = true, features = ["aws-lc-rs"] }
tokio-stream = { workspace = true }
tower = { workspace = true }
tower-layer = { workspace = true }
tonic = { workspace = true, features = ["gzip", "zstd", "tls-native-roots"] }
tonic-health = { workspace = true }
tonic-prost = { workspace = true }
wincode = { workspace = true }
url = { workspace = true, features = ["serde"] }
notify = { workspace = true }

# Agave Monorepo
agave-geyser-plugin-interface = { workspace = true }
solana-logger = { workspace = true }

# Solana SDK
solana-account = { workspace = true }
solana-account-decoder = { workspace = true }
solana-clock = { workspace = true }
solana-commitment-config = { workspace = true }
solana-hash = { workspace = true }
solana-message = { workspace = true }
solana-pubkey = { workspace = true }
solana-signature = { workspace = true }
solana-transaction = { workspace = true, features = ["wincode"] }
solana-transaction-context = { workspace = true }
solana-transaction-error = { workspace = true, features = ["wincode"] }
solana-transaction-status = { workspace = true }

# Solana Misc
smallvec = { workspace = true }
solana-storage-proto = { workspace = true, optional = true }
spl-token-2022-interface = { workspace = true }

# Yellowstone
yellowstone-grpc-proto = { workspace = true, features = ["tonic", "account-data-as-bytes"] }
yellowstone-block-machine = { workspace = true, default-features = false }
yellowstone-grpc-tools = { workspace = true }

[target.'cfg(any(target_os = "linux", target_os = "windows"))'.dependencies]
# wrapped in mod cpu_core_affinity
affinity = { workspace = true }

[[bench]]
name = "encode"
harness = false
required-features = ["bench"]


[build-dependencies]
anyhow = { workspace = true }
cargo-lock = { workspace = true }
git-version = { workspace = true }
protoc-bin-vendored = { workspace = true }
tonic-build = { workspace = true }
tonic-prost-build = { workspace = true }
vergen = { workspace = true, features = ["build", "rustc"] }

[dev-dependencies]
bytes = { workspace = true }
criterion = { workspace = true }
solana-keypair = { workspace = true }
solana-signature = { workspace = true }
solana-signer = { workspace = true }
solana-storage-proto = { workspace = true }
solana-transaction = { workspace = true, features = ["wincode", "blake3"] }

[lints]
workspace = true
